--- a/Penn State Search/Settings.bundle/Root.plist
+++ b/Penn State Search/Settings.bundle/Root.plist
@@ -26,7 +26,7 @@
 			<key>Key</key>
 			<string>showAllBuildings</string>
 			<key>Title</key>
-			<string>Show Buildings Without Images</string>
+			<string>Show All Buildings</string>
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 		</dict>
